--- a/contact.html
+++ b/contact.html
@@ -424,7 +424,7 @@
           <span>|</span>
           <a href="contact.html">Contact Us</a>
         </nav>
-        <p id="footerText">All Rights Reserved &copy; Webclass</p>
+        <p id="footerText">All Rights Reserved &copy; Shalinda Madhumal</p>
       </div>
     </footer>
   </body>
